# UnifiedParticleFrameworkCUDA

./: README.md  UnifiedParticleFrameworkCUDA.sln  UnifiedParticleFrameworkCUDA.vcxproj  UnifiedParticleFrameworkCUDA.vcxproj.bak  UnifiedParticleFrameworkCUDA.vcxproj.filters
ffmpeg/lib/: avcodec-55.def  avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-52.def  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/cpu/: Face.cpp  Face.h  GlutApplication.cpp  GlutApplication.h  GlutWindow.cpp  GlutWindow.h  Matrix3x3.cpp  Matrix3x3.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  ObjectLoader.cpp  ObjectLoader.h  Polygon.cpp  Polygon.h  RigidBody.cpp  RigidBody.h  UnifiedIO.cpp  UnifiedIO.h  UnifiedParticle.cpp  UnifiedParticle.h  UnifiedPhysics.cpp  UnifiedPhysics.h  UnifiedWindow.cpp  UnifiedWindow.h  Vector3D.cpp  Vector3D.h  WeightingKernel.cpp  WeightingKernel.h  cudaSPH_Include.h  cutil.h  globalPath.h  host_defines.h  main.cpp  render_particles.cpp  render_particles.h  shaders.cpp  shaders.h  sort.h  (+3 more)
src/gpu/: UnifiedMathCUDA.cu  UnifiedMathCUDA.cuh  particles.cu  particles.cuh  particles_kernel.cu  particles_kernel.cuh  radixsort.cuh  radixsort_kernel.cu
src/meshParticles/: adf.h  algo.h  arcballcontroller.h  baseballcontroller.h  bits.h  body.h  boundingvolume.h  cachingsparsescalarlattice.h  cell.h  distancetransform.h  extractsurface.h  gltools.h  hashing.h  index.h  kdtree.h  levelset.h  ray.h  (+25 more)
src/vmmlib/: Makefile.am  exception.hpp  lapack_svd.hpp  matrix.hpp  matrix3.h  quaternion.h  svd.hpp  vector.hpp  vector2.h  vector3.h  vector4.h
(+163 files in other folders)
