# vmmlib lib

# libs sources, headers here because we dont want to install them
noinst_HEADERS =	 \
    axisAlignedBoundingBox.h details.hpp exception.hpp \
    frustum.h frustum.hpp frustumCuller.h frustumCuller.hpp \
    helperFunctions.h jacobiSolver.h jacobiSolver.hpp \
    lapack_includes.hpp lapack_svd.hpp lapack_types.hpp lapack.hpp \
    lapack_linear_least_squares.hpp linear_least_squares.hpp \
    matrix_functors.hpp matrix.hpp matrix3.h matrix4.h \
    qr_decomposition.hpp quaternion.h quaternion.hpp \
    stringUtils.h stringUtils.hpp svd.h svd.hpp \
    vector.hpp vector2.h vector3.h vector4.h visibility.h visibility.hpp \
    vmmlib_config.hpp vmmlib.h vmmlib.hpp

# include paths
AM_CPPFLAGS = $(CXXFLAGS)

# libs to link
AM_LDFLAGS =
